[project]
name = "usdb-syncer-separation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "randompersona1", email = "74961116+randompersona1@users.noreply.github.com" }
]
requires-python = ">=3.11, <3.12"
dependencies = [
    "demucs",
    "numpy<2",
    "setuptools<81",
    "soundfile",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.1.2",
    "torchaudio>=2.1.2",
]
cuda121 = [
    "torch>=2.1.2",
    "torchaudio>=2.1.2",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda121" },
  ],
]

[tool.uv.sources]
demucs = { git = "https://github.com/adefossez/demucs", rev = "b9ab48cad45976ba42b2ff17b229c071f0df9390" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cuda121" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu121", extra = "cuda121" },
]

[project.scripts]
usdb-syncer-separation = "usdb_syncer_separation:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstaller>=6.19.0",
    "ruff>=0.14.14",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


[tool.ruff]
target-version = "py312"

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "D",
    "E",
    "F",
    "FA",
    "FLY",
    "I",
    "ISC",
    "INP",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "TC",
    "TRY",
    "UP",
    "W",
]
ignore = [
    # Since we're using the ruff formatter, we follow ruff's official guide on what
    # rules to skip: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    # 'Line too long' will be caught by format check
    "E501",
    # We're fine with `assert`s if they're not used for validation, but state facts
    "S101",
    # Allow `subprocess` and starting without shell.
    "S404",
    "S603",
    "S606",
    # Maybe investigate in the future, if it is possible to do this more safely.
    "S607",
    # This flags _all_ dynamic SQL constructions, so it's pointless.
    "S608",
    # Since we don't have a public api, we don't require docstrings for functions.
    "D102",
    "D103",
    "D105",
    "D107",
    # D415 is handled by D400 already, so we skip it to avoid double warnings.
    "D415",
    # D203 and D211 are incompatible. We prefer D211.
    "D203",
    # D212 and D213 are incompatible. We prefer D212.
    "D213",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
# For consistency with the formatter, see https://docs.astral.sh/ruff/settings/#lint_isort_split-on-trailing-comma
split-on-trailing-comma = false
